Fix wrapping of highlighted text when there are no spaces

--- a/src/css/blyrics.css
+++ b/src/css/blyrics.css
@@ -143,7 +143,7 @@
 .blyrics-container > div > span {
 	color: var(--blyrics-lyric-inactive-color);
 	display: inline-block;
-	white-space: pre;
+	white-space: pre-wrap;
 	transform: translateY(0px);
 }
 
@@ -170,7 +170,7 @@
 	content: attr(data-content);
 	top: -2rem;
 	left: -2rem;
-	white-space: pre;
+	white-space: pre-wrap;
 	padding: 2rem;
 	/*color: var(--blyrics-lyric-active-color);*/
 	color: transparent;
